# capstone

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
backend/: .env.example  README.md  main.py  settings.py
backend/server/: app.py  auth.py  database.py  email_helpers.py
backend/server/actions/: job_actions.py  message_actions.py  tag_actions.py  template_actions.py  todo_actions.py  user_actions.py
backend/server/models/: job_models.py  mongo_base_model.py  tag_models.py  template_models.py  todo_models.py  user_models.py
backend/server/routes/: job_routes.py  tag_routes.py  template_routes.py  user_routes.py
backend/server/templates/: email.html
backend/tests/: common.py  conftest.py  test_jobs.py  test_tags.py  test_todos.py  test_users.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  store.js
frontend/src/components/: AddJobForm.js  AddTodoForm.js  EditJobForm.js  EditTodoForm.js  JobDetail.js  JobForm.js  JobSearchBar.js  JobTabs.js  KeyStats.js  Messages.js  NavBar.js  PrivateRoute.js  Tag.js  Tags.js  TagsFilter.js  Todo.js  TodoList.js  TodoTab.js  Todos.js
frontend/src/context/: auth.js
frontend/src/pages/: Dashboard.js  Home.js  Login.js  Signup.js
frontend/src/utils/: datetime.js  error.js  statusConst.js
jobful-extension/: README.md  package-lock.json  package.json
jobful-extension/public/: index.html  manifest.json
jobful-extension/src/: App.js
mvp/: main.py  settings.py
mvp/server/: app.py  auth.py  database.py
tests/: test_mvp.py
(+26 files in other folders)
