[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hung Nguyen <hung.nguyen.2@minerva.kgi.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
email-validator = "^1.1.2"
motor = "^2.3.0"
tornado = "^6.1"
python-dotenv = "^0.15.0"
fastapi-users = {extras = ["mongodb"], version = "^3.0.6"}
requests = "^2.25.1"
pytest-asyncio = "^0.14.0"
httpx = "^0.17.1"
fastapi-utils = "^0.2.1"
fastapi-mail = "^0.3.5"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
